2008-04-24  Anders Carlsson  <andersca@apple.com>

        Windows build fix.
        
        * html/HTMLFormElement.cpp:
        (WebCore::pathGetFilename):

2008-04-24  Anders Carlsson  <andersca@apple.com>

        Don't crash when the string is empty.
        
        * html/HTMLMediaElement.cpp:
        (WebCore::parseTimeOffset):

2008-04-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - preparation for https://bugs.webkit.org/show_bug.cgi?id=3729
          <rdar://problem/4036353> REGRESSION: arrow keys move insertion bar backwards in RTL text

        The three main changes in this patch are:

        1) Making all inline boxes know their bidi level, instead of just text
           boxes knowing whether their bidi level is odd or even. This is
           required for the next change.

        2) Replacing RenderObject::inlineBox() with
           Position::getInlineBoxAndOffset() in recognition of the fact that the
           inline box containing the primary caret for a position in a given
           node may belong to a different node's renderer.

        3) Changing RenderObject::caretRect() to take an InlineBox parameter,
           and changing callers to call VisiblePosition::caretRect(), which
           locates the inline box, then calls caretRect() on the renderer for
           that box. This, combined with the previous change, ensures that the
           primary caret is rendered at the right place for positions that
           lie on a directionality boundary.

        Test: platform/mac/editing/input/caret-primary-bidi.html

        * WebCore.base.exp: Added the VisiblePosition(Node*, int, EAffinity)
        constructor and VisiblePosition::caretRect(), and sorted.

        * dom/Position.cpp:
        (WebCore::nextRenderedEditable): Adjusted for the removal of
        RenderObject::inlineBox().
        (WebCore::previousRenderedEditable): Ditto.
        (WebCore::Position::rendersInDifferentPosition): Ditto.